--- a/app/assets/stylesheets/modules/_items-new.scss
+++ b/app/assets/stylesheets/modules/_items-new.scss
@@ -8,24 +8,27 @@
         padding: 32px 16px;
         font-size: 22px;
       } 
-      .sell-form {
+      .new_item {
+        select {
+          -webkit-appearance: none;
+        }
         border-top: 1px solid $light-grey;
-        .uploud-box {
+        p {
+          margin: 8px 0 10px;
+          line-height: 1.5;
+        }
+        .sell-box {
           width: 620px;
           padding: 40px;
-          .uploud-header {
+          h3.uploud-header {
             font-size: 16px;
             font-weight: bold;
+            display: inline-block;
           }
-          p {
-            margin: 8px 0 0;
-            line-height: 1.5;
-          }
-          .dropbox-container  {
+          .dropbox-container {
             display: block;
             width: 620px;
-            margin: 16px auto 0;
-            .uploud-items {
+            .uploud-contaner {
               display: inline;
               &__have-item {
                 float: left;
@@ -33,13 +36,37 @@
               }
             }
             .uploud-dropbox {
-              width: 100%;
-              margin-left: 0;
+              float: right;
+              width: 83%;
+              margin-right: 10px;
+              padding: 40px;
+              position: relative;
+              min-height: 100px;
+              background: #f5f5f5;
+              border: 1px dashed #ccc;
+              font-size: 0;
+              text-align: center;
+              cursor: pointer;
+              .uploud-dropfile {
+                display: none;
+              }
+              pre {
+                position: absolute;
+                top: 50%;
+                left: 16px;
+                right: 16px;
+                text-align: center;
+                font-size: 14px;
+                line-height: 1.5;
+                pointer-events: none;
+                white-space: pre-wrap;
+                word-wrap: break-word;
+              }
             }
           }
         }
+        
         .sell-content {
-          @include clearfix;
           padding: 40px;
           border-top: 1px solid $light-grey;
           .form-group {
@@ -48,33 +75,19 @@
               font-weight: 600;
               display: inline-block;
             }
-            .form-require {
-              background-color: $main-red;
-              margin: 0 0 0 8px;
-              padding: 2px 4px;
-              border-radius: 2px;
-              color: #fff;
-              font-size: 12px;
-              vertical-align: top;
-            }
-            .input-box {
-              display: block;
-              .input-default {
-                width: 100%;
-                margin: 8px 0 0;
-                height: 48px;
-                padding: 10px 16px 8px;
-                border-radius: 4px;
-                border: 1px solid #ccc;
-                background: #fff;
-                line-height: 1.5;
-                font-size: 16px;
-              }
+            .input-default {
+              padding: 10px 16px 8px;
+              border-radius: 4px;
+              border: 1px solid #ccc;
+              background: $white;
+              line-height: 1.5;
+              font-size: 16px;
+              width: 96%;
+              margin: 8px 0 0;
             }
             .textarea-default {
-              margin: 8px 0 0;
               display: block;
-              width: 100%;
+              width: 98%;
               max-width: 100%;
               min-height: 104px;
               padding: 10px;
@@ -82,16 +95,49 @@
               background: #fff;
               font-size: 16px;
               line-height: 1.5;
+              margin: 8px 0 0;;
               border-radius: 4px;
             }
-          } 
-          h3.sell-sub-header {
+            .select-box {
+              .select-wrap {
+                margin: 8px 0 0;
+                position: relative;
+                background: $white;
+                .icon {
+                  position: absolute;
+                  right: 16px;
+                  top: 50%;
+                  z-index: 2;
+                  color: #888;
+                  font-size: 8px;
+                }
+                select {
+                  width: 100%;
+                  position: relative;
+                  z-index: 2;
+                  height: 48px;
+                  padding: 0 16px;
+                  border-radius: 4px;
+                  border: 1px solid #ccc;
+                  background: 0;
+                  font-size: 16px;
+                  line-height: 1.5;
+                  cursor: pointer;
+                }
+              }
+            }
+            
+          }
+          .first-box {
+            margin: 0;
+            border: 0;
+          }
+          h3.sub-header {
             float: left;
             color: #888;
             font-size: 14px;
-            justify-content: space-around;
           }
-          .form-question {
+          .form-question  {
             display: inline-block;
             width: 14px;
             height: 14px;
@@ -106,85 +152,46 @@
             float: right;
             width: 400px;
             margin: 0;
-            .form-group {
-              .select-box {
-                .select-wrap {
-                  margin: 8px 0 0;
-                  position: relative;
-                  background: #fff;
-                  .icon{
-                    position: absolute;
-                    right: 16px;
-                    top: 50%;
-                    z-index: 2;
-                    color: #888;
-                    font-size: 8px;
-                    -webkit-transform: translate(0, -50%);
-                    transform: translate(0, -50%);
-                  }
-                  select {
-                    width: 100%;
-                    position: relative;
-                    z-index: 2;
-                    height: 48px;
-                    padding: 0 16px;
-                    border-radius: 4px;
-                    border: 1px solid #ccc;
-                    background: 0;
-                    font-size: 16px;
-                    line-height: 1.5;
-                    cursor: pointer;
-                  }
-                }
+            ul.sell-price {
+              li {
+                padding: 24px 0;
+                border-top: 1px solid #ccc; 
               }
-              ul.sell-price {
-                li.form-group {
-                  padding-bottom:24px;
-                  .clearfix {
-                    .list-left {
-                      width: 50%;
-                      line-height: 48px;
-                    }
-                    list-right {
-                      float: right;
-                      width: 50%;
-                      text-align: right;
-                      .price-input {
-                        display: block;
-                        width: 80%;
-                        margin: 0 0 0 5%;
-                        .input-default{
-                          width: 100%;
-                          margin: 8px 0 0;
-                          height: 48px;
-                          padding: 10px 16px 8px;
-                          border-radius: 4px;
-                          border: 1px solid #ccc;
-                          background: #fff;
-                          line-height: 1.5
-                      }
-                    }
+              li.first-box {
+                padding: 0 0 24px;
+                margin: 0;
+                border: none;
+              }
+              .list-left {
+                width: 50%;
+                float: left;
+                margin:0;
+                height: 48px;
+                line-height: 48px;
+              }
+              .list-right {
+                float: right;
+                .price-mark {
+                  height:48px;
+                  float: left;
+                  line-height: 48px;
+                }
+                .price-box {
+                  width: 80%;
+                  margin: 0 0 0 5%;
+                  .input-default {
+                    margin: 0;
+                    text-align: right;
                   }
                 }
               }
             }
-            }
           }
-          .first-box {
-            margin:0;
-          }
-        .sell-content__warning{
-          p {
-            line-height: 1.5;
-            a{
-              color: #0099e8;
-              text-decoration: none;
-            }
-          }
+        }
           .btn-red {
             background: $main-red;
             border: 1px solid $main-red;
-            color: #fff;
+            color: $white;
             display: block;
             width: 100%;
             line-height: 48px;
@@ -194,23 +201,38 @@
             margin: 40px 0 0;
           }
           .btn-grey {
-              width: 45%;
-              margin: 24px auto 0;
-              background: #aaa;
-              border: 1px solid #aaa;
-              color: #fff;
-              display: block;
-              line-height: 48px;
-              font-size: 14px;
-              cursor: pointer;
-              text-align: center;
+            width: 45%;
+            margin: 24px auto 0;
+            background: #aaa;
+            border: 1px solid #aaa;
+            color: $white;
+            display: block;
+            line-height: 48px;
+            font-size: 14px;
+            cursor: pointer;
+            text-align: center;
           }
+        .first-box {
+          margin: 0;
+          border: 0;
         }
+        .form-require {
+          background: $main-red;
+          margin: 0 0 0 8px;
+          padding: 2px 4px;
+          border-radius: 2px;
+          color: $white;
+          font-size: 12px;
+          vertical-align: top;
+        }
+        .clearfix {
+          @include clearfix;
+        }
+        .bold {
+          font-weight: 600;
+          font-size: 16px;
         }
       }
     }
-  } 
+  }
 }
-
-
-
